start-sidebar-structure

--- a/index.html
+++ b/index.html
@@ -11,7 +11,29 @@
 </head>
 <body>
     <div id="app">
-        
+        <body class="d-flex justify-content-center align-items-center">
+            <div class="wrapper">
+                <div class="row m-0">
+                    <div class="col-12 col-xl-4 p-0 debug">
+                        <div id="sidebar" class="d-flex flex-column">
+                            <header class="header-col debug">
+
+                            </header>
+                            <div class="banner">
+
+                            </div>
+                            <div class="search-contacts d-flex align-items-center justify-conter-center p-2">
+                                <i class="fa-solid fa-magnifying-glass px-4 rounded-1 rounded-end-0"></i>
+                                <input class="w-100 px-1 border-0 py-1 rounded-1 rounded-start-0" type="search" placeholder="Cerca o inizia una nuova chat">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-xl-8 debug">
+                        <!-- chat -->
+                    </div>
+                </div>
+            </div>
+        </body>
     </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="./js/utility.js"></script>
