add-content-headerSide & banner

--- a/index.html
+++ b/index.html
@@ -19,12 +19,28 @@
                     <div class="col-12 col-xl-4 p-0 debug">
                         <div id="sidebar" class="d-flex flex-column">
                             <!-- HEADER-SIDE -->
-                            <header class="header-col debug">
-
+                            <header class="header-col d-flex align-items-center justify-content-between debug">
+                                <div class="my-account d-flex align-items-center debug">
+                                    <div class="box-pic debug" id="my-pic">
+                                        <img src="./img/avatar_1.jpg" alt="">
+                                    </div> 
+                                    <span class="fw-semibold">Nicolò</span>
+                                </div>
+                                <div class="my-option pe-3 d-flex align-items-center">
+                                    <i class="fa-solid fa-circle-notch"></i>
+                                    <i class="fa-solid fa-message"></i>
+                                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                                </div>
                             </header>
                             <!-- BANNER -->
-                            <div class="banner">
-
+                            <div class="banner d-flex align-items-center">
+                                <div class="box-bell d-flex justify-content-center align-items-center">
+                                    <i class="fa-solid fa-bell-slash"></i>
+                                </div>
+                                <div class="banner-content p-3 d-flex flex-column justify-content-center">
+                                    <span class="fw-semibold">Ricevi notifiche di nuovi messaggi</span>
+                                    <span class="active-notice">Attiva notifiche desktop</span>
+                                </div>
                             </div>
                             <!-- SEARCH-BAR -->
                             <div class="search-contacts d-flex align-items-center justify-conter-center p-2">
