add-main-chat-container

--- a/index.html
+++ b/index.html
@@ -71,9 +71,42 @@
                             </div>
                         </div>
                     </div>
+
                     <!-- CHAT-COLUMN -->
-                    <div class="col-12 col-xl-8 debug">
-                        <!-- chat -->
+                    <div class="col-12 col-xl-8 p-0" id="col-chat">
+                        <div id="main-chat" class="d-flex flex-column">
+                            <!-- HEADER-CHAT -->
+                            <header class="header-col d-flex align-items-center justify-content-between debug">
+                                <div class="my-account d-flex align-items-center debug">
+                                    <div class="box-pic debug" id="my-pic">
+                                        <img src="./img/avatar_3.jpg" alt="">
+                                    </div> 
+                                    <span class="fw-semibold">Nicolò</span>
+                                </div>
+                                <div class="my-option pe-3 d-flex align-items-center">
+                                    <i class="fa-solid fa-circle-notch"></i>
+                                    <i class="fa-solid fa-message"></i>
+                                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                                </div>
+                            </header>
+                            <!-- CHAT-CONTAINER -->
+                            <div class="chat-container debug">
+                                
+                            </div>
+                            <!-- FOOTER CHAT -->
+                            <footer class="d-flex justify-content-center align-items-center py-3 debug">
+                                <div class="emoji debug ">
+                                    <i class="fa-regular fa-face-smile"></i>
+                                </div>
+                                <div class="write-in w-100 debug">
+                                    <input type="text" class="w-100 py-2 px-2 rounded-2 border-0" placeholder="Scrivi un messaggio">
+                                </div>
+                                <div class="record-voice debug">
+                                    <i class="fa-solid fa-microphone"></i>
+                                </div>
+                            </footer>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
