--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <!-- CONTACTS-LIST (RECENTLY) -->
                             <div class="container-contacts d-flex flex-column">
                                 <!-- CARD-CONTACT -->
-                                <div class="card rounded-0 d-flex flex-row justify-content-between py-2" v-for="(currentChat, index) in contacts" @click="selectChat(index)" :key="contacts[index].id">
+                                <div class="card rounded-0 d-flex flex-row justify-content-between py-2" v-for="(currentChat, index) in contacts" @click="selectChat(index), messageStatus(index)" :key="contacts[index].id">
                                     <div class="container-profile-pic d-flex justify-content-center ">
                                         <div class="box-pic ">
                                             <img :src="currentChat.avatar" alt="">
