--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/luxon@3.3.0/build/global/luxon.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
     <title>Boolzapp</title>
@@ -99,7 +100,8 @@
                                 <div class="row m-0 mb-2 debug d-flex" :class="{'justify-content-end' : msg.status === 'sent' }" id="sent" v-for="(msg, index) in contacts[chatId].messages">
                                     <div class="col-6 debug">
                                         <div class="mex-sent d-flex flex-column align-items-center gap-2">
-                                            <span :class="{'mess-sent': msg.status === 'sent', 'mess-recevied' : msg.status === 'received'}">{{msg.message}}</span>
+                                            <span :class="{'mess-sent': msg.status === 'sent', 'mess-recevied' : msg.status === 'received'}">{{msg.message}}<span class="execution-time">{{msg.date}}</span></span>
+                                            
                                         </div>
                                     </div>
                                 </div>
