add-lastMessage (fix required)

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                             {{currentChat.name}}
                                         </div>
                                         <div class="last-mex ps-2">
-                                            Ultimo messaggio inviato
+                                            {{lastMessage}}
                                         </div>
                                     </div>
                                     <div class="last-mex-hour pt-1 d-flex justify-content-center ">
