--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                             {{currentChat.name}}
                                         </div>
                                         <div class="last-mex ps-2">
-                                            ultimo messaggio
+                                            {{ currentChat.messages.slice(-1)[0].message }}
                                         </div>
                                     </div>
                                     <div class="last-mex-hour pt-1 d-flex justify-content-center ">
