--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                             <!-- SEARCH-BAR -->
                             <div class="search-contacts d-flex align-items-center justify-conter-center p-2">
                                 <i class="fa-solid fa-magnifying-glass px-4 rounded-1 rounded-end-0"></i>
-                                <input class="w-100 px-1 border-0 py-1 rounded-1 rounded-start-0" type="search" placeholder="Cerca o inizia una nuova chat">
+                                <input class="w-100 px-1 border-0 py-1 rounded-1 rounded-start-0" type="search" placeholder="Cerca o inizia una nuova chat" v-model="searchTerm">
                             </div>
                             <!-- CONTACTS-LIST (RECENTLY) -->
                             <div class="container-contacts d-flex flex-column">
                                 <!-- CARD-CONTACT -->
-                                <div class="card rounded-0 d-flex flex-row justify-content-between py-2" :class="{'active': currentChat.visible}" v-for="(currentChat, index) in contacts" @click="selectChat(index), messageStatus(index)" :key="contacts[index].id">
+                                <div class="card rounded-0 d-flex flex-row justify-content-between py-2" :class="{'active': currentChat.visible}" v-for="(currentChat, index) in filterContacts()" @click="selectChat(index), messageStatus(index)" :key="contacts[index].id">
                                     <div class="container-profile-pic d-flex justify-content-center ">
                                         <div class="box-pic ">
                                             <img :src="currentChat.avatar" alt="">
@@ -65,7 +65,7 @@
                                             {{ currentChat.messages.slice(-1)[0].message }}
                                         </div>
                                     </div>
-                                    <div class="last-mex-hour pt-1 d-flex justify-content-center ">
+                                    <div class="last-mex-hour pt-1 d-flex justify-content-center">
                                         12:00
                                     </div>
                                 </div>
