fix-lastMessage-date

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                         </div>
                                     </div>
                                     <div class="last-mex-hour pt-1 d-flex justify-content-center">
-                                        12:00
+                                        {{ currentChat.messages.slice(-1)[0].date }}
                                     </div>
                                 </div>
                             </div>
